src/test/ui/closures/2229_closure_analysis/diagnostics/cant-mutate-imm-borrow.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/cant-mutate-imm-borrow.rs:4:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error[E0594]: cannot assign to `z`, as it is not declared as mutable
  --> $DIR/cant-mutate-imm-borrow.rs:16:9
   |
LL |     let z = (& y, "Z");
   |         - help: consider changing this to be mutable: `mut z`
...
LL |         z.0.0.0 = format!("X1");
   |         ^^^^^^^ cannot assign

error[E0596]: cannot borrow `z.0.0.0` as mutable, as it is behind a `&` reference
  --> $DIR/cant-mutate-imm-borrow.rs:14:17
   |
LL |     let mut c = || {
   |                 ^^ cannot borrow as mutable
LL |
LL |         z.0.0.0 = format!("X1");
   |         - mutable borrow occurs due to use of `z.0.0.0` in closure

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0594, E0596.
For more information about an error, try `rustc --explain E0594`.
